v 0.14

- Add separate clock for engine, so loading times are not taken into account
  for player movements.
- Add timing in ms, in log file.
- Heavy rewrite for texturing. The background image is processed with same stuff
  as the model textures.
- Can set width,height,bpp of video mode

v 0.13

- Dump room scripts (see -dumpscript command).
- Display doors and walls on map.
- Can enter doors (only RE2/RE3).

v 0.12

- Fixed some bugs in S-Buffer.
- Added 24 bits rendering to software renderer.
- Added room map with camera, camera switches and boundaries.
- OpenGL: Disabled ARB_npot texture support, till testable.
- OpenGL: Only upload texture to video card when loading model.
- Camera switches, and boundary checks for player movement.
- RE1: Fixed wrong row length for some backgrounds.

v 0.11

- Received contribution to add more PS1 versions, thanks to Mark Grass.
- Reworked detection of game/demo versions.
- S-Buffer implementation for software renderer.

v 0.10

- Switchable wireframe/filled/gouraud-ed/textured for model drawing, for
  both OpenGL and software renderers.
- 64 bits fixes for camera position.
- Win32: Disable gamma, due to some buggy SDL versions.

v 0.9

- Display EMD model also for RE1 (pc/ps1), RE2 (pc/ps1) and RE3 pc.
- Model selection
- Move model up/down
- Fixed crash in OpenGL renderer, due to bad conversion of background image.
- Add 8bit video mode support, with dithering for background if needed
- Preliminary VS2005 project file.

v 0.8

- Display an EMD object (RE2 pc demo only).
- Forceable background restoration and reset player position

v 0.7

- Separate software and OpenGL renderers.
- Togglable grid display.
- Removed libGLU dependency.

v 0.6

- There are two different demos of Resident Evil 2 for PC.
- Try to deal with screen aspect ratio if possible.
- Separated OpenGL and software renderer.
- Software renderer: rescale background to match window size.
- More C language compatibility.
- Configurable prefix for physfs.

v 0.5
